--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#076e64</color>
+    <color name="colorPrimaryDark">#fcd7dc</color>
+    <color name="colorAccent">#acffb6</color>
+
 
     <!-- Background color for text MU! for the splash screen -->
     <color name="background_text__color">#ffffff</color>
@@ -17,18 +18,42 @@
     <color name="primary_dark_color">#2F1D1A</color>
 
     <!-- Background color for the chill category -->
-    <color name="category_chill">#FD8E09</color>
+    <color name="category_chill">#f47710</color>
 
     <!-- Background color for the retro category -->
-    <color name="category_retro">#379237</color>
+    <color name="category_retro">#0a910a</color>
 
     <!-- Background color for the oldies category -->
-    <color name="category_oldies">#8800A0</color>
+    <color name="category_oldies">#9d10b6</color>
+
+    <!-- Background color for the oldies category -->
+    <color name="category_songs">#df5050</color>
 
     <!-- Background color for singer -->
     <color name="background_color">#000000</color>
 
     <!-- Background color for songs -->
-    <color name="songs_color">#7019c1</color>
+    <color name="songs_color">#a368da</color>
+
+    <!-- Background color for Chill -->
+    <color name="chill_background">#edc2c3</color>
+
+    !-- Background color for list -->
+    <color name="lists_background">#d6e5f5</color>
+
+    !-- Background color for activity_now_playing -->
+    <color name="playlists__background">#dbe2e9</color>
+
+    !-- Background color for activity_playlists -->
+    <color name="playlists_activity_background">#e6edd3</color>
+
+    <!-- Background color song1_playlist -->
+    <color name="song1_background">#9dc3e1</color>
+
+    <!-- Background color for song2_playlist -->
+    <color name="song2_background">#e19da0</color>
+
+    <!-- Background color for song3_playlist -->
+    <color name="song3_background">#c67ce1</color>
 
 </resources>
