--- a/app/src/main/res/layout/activity_oldies.xml
+++ b/app/src/main/res/layout/activity_oldies.xml
@@ -8,7 +8,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="@drawable/oldies_home"
+    android:background="@color/colorPrimaryDark"
     tools:context=".Oldies">
 
     <ListView
